crates/wsh-lang/src/parser/snapshots/wsh_lang__parser__tests__symbols.snap
---
source: crates/wsh-lang/src/parser/mod.rs
expression: ast
---
Ast {
    defs: [],
    statements: [
        Pipeline(
            Pipeline {
                env: [],
                commands: [
                    Command {
                        name: "echo",
                        args: [
                            Ident(
                                Ident(
                                    "x",
                                ),
                            ),
                            Ident(
                                Ident(
                                    "y",
                                ),
                            ),
                        ],
                        merge_stderr: false,
                    },
                ],
                write: None,
            },
        ),
    ],
}
